编译增加必须指定jdk版本
