# swagger/swagger.yml
@@ -59,6 +59,11 @@ paths:
         description: project name
         required: true
         type: string
+      - in: query
+        name: jdk_version
+        description: jdk version {1.5 1.6 1.7 1.8}
+        required: true
+        type: string
       responses:
         50X:
           description: app has error
@@ -150,7 +155,7 @@ paths:
         type: string
       - in: query
         name: tasklist
-        description: 从checkout;codecheck;compile;pack中组合,多个以分号隔开
+        description: 从checkout;codecheck;compile|jdk_version;pack|project_version中组合,多个以分号隔开
         required: true
         type: string
       responses:
@@ -184,12 +189,26 @@ paths:
       responses:
         "200":
           schema:
-            $ref: '#/definitions/.CronAllInfo'
+            $ref: '#/definitions/models.CronInfo'
         "403":
           description: body is empty
 definitions:
-  .CronAllInfo:
+  models.CronInfo:
+    title: CronInfo
     type: object
+    properties:
+      NextRunTime:
+        type: string
+      PreRunTime:
+        type: string
+      Project:
+        type: string
+      Spec:
+        type: string
+      TaskList:
+        type: string
+      TaskName:
+        type: string
   models.Object:
     title: Object
     type: object
